<resources>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCrdcQhnH0CYq5VttxFVqT4ssjnIX1EKtI</string>

    <!--- Addmob   !-->
    <string name="app_ad_id">ca-app-pub-6382099871444261~9778932425</string>
    <string name="banner_ad_unit_id">ca-app-pub-6382099871444261/7164732597</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6382099871444261/4249427662</string>
    <string name="banner">BANNER</string>

    <string name="app_name">StoreLocator</string>
    <string name="title_activity_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="permission_denied">Permission denied, map will not work!</string>

    <!-- Settings activity -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>

    <!--Drawer menus title-->
    <string name="menu_home">Home</string>
    <string name="menu_allstore">All Store</string>
    <string name="menu_news">News</string>
    <string name="menu_settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>

    <!--Bottom Navigation Drawer Item-->
    <string name="text_map">Map</string>
    <string name="text_allStore">All Store</string>
    <string name="text_news">News</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_fav">Favorites</string>
    <string name="open">Open</string>

    <!--common strings-->
    <string name="empty_result">No data!</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="share_text">Install best shopping application from:</string>
    <string name="detaits">very refreshing and creatively pleasing. this food is so delicious</string>
    <string name="read_more">Read more...</string>
    <string name="news">News</string>
    <string name="setting">Settings</string>
    <string name="notification">Notification</string>
    <string name="text_title">KFC MIRPUR BRANCH</string>
    <string name="search">Search...</string>
    <string name="title_activity_store_detail">StoreDetailActivity</string>

    <string name="cover">Radius</string>

    <!-- alert dialoge text -->
    <string name="dialoge_text">Are you sure,want exit from App?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="store_locator">Store Locator</string>
    <string name="notifications">Notifications</string>
    <string name="offer_news_title">KFC MIRPUR,50% OFF ON BURGER</string>
    <string name="address">Bulu Ocean Tower, 40 Kemal Ataturk Avenue, Dhaka 1212</string>
    <string name="distance">Distances:2 km from you</string>

    <string name="not_found">not found over your area</string>
    <string name="details">Details</string>
    <string name="more">More</string>
    <string name="map_fragmentt">mapFragment</string>
    <string name="alls_store_fragment">allStoreFragment</string>
    <string name="news_fragment">newsFragment</string>

</resources>
