<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:enabled="true"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_marker"
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item

            android:enabled="true"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_all_store"
            android:id="@+id/nav_allStore"
            android:title="@string/menu_allstore" />
        <item

            android:enabled="true"
            app:showAsAction="ifRoom"
            android:icon="@drawable/newspaper"
            android:id="@+id/nav_news"
            android:title="@string/menu_news" />
        <item

            android:enabled="true"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_settings"
            android:id="@+id/nav_setting"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item

                android:enabled="true"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_share"
                android:id="@+id/nav_share"
                android:title="@string/share" />
            <item
                android:enabled="true"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_rate"
                android:id="@+id/nav_rate"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>
