<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.evergreen.locator.activity.NewsDetailActivity">
    <ImageView
        android:id="@+id/image_view_news"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_width_250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@color/gray_active_icon" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/layout_margin_10dp"
        android:layout_marginLeft="@dimen/margin_pad_16dp"
        android:layout_marginRight="@dimen/margin_pad_16dp"
        android:layout_marginTop="@dimen/layout_height_width_200dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_below="@+id/image_view_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_pad_16dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtview_news_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/offer_news_title"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_18sp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/black"/>
            <TextView
                android:textSize="@dimen/textsize_14sp"
                android:id="@+id/txtview_news_detail"
                android:layout_marginTop="@dimen/layout_margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/detaits"/>

        </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="@string/banner"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
