<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_notification_details">

    <include
        android:id="@+id/toolbar_main_settings"
        layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_10dp"
        android:layout_marginRight="@dimen/layout_margin_10dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/margin_pad_5dp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin_10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textSize="@dimen/textsize_18sp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_pad_5dp"
                    android:textSize="@dimen/textsize_16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_10dp"
                    android:text="@string/details"
                    android:textSize="@dimen/textsize_16sp" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_pad_5dp" />

                <Button
                    android:id="@+id/linkButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_width_40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/layout_margin_20dp"
                    android:text="@string/more"
                    android:visibility="gone" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="@string/banner"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>