<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_height_width_2dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_width_170dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/margin_pad_5dp"
        app:cardElevation="@dimen/margin_pad_5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/rootlyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_news_banner"
                android:layout_width="@dimen/layout_height_width_120dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@color/gray_active_icon" />

            <LinearLayout
                android:layout_marginRight="@dimen/layout_height_weight_5dp"
                android:layout_marginTop="@dimen/layout_height_width_15dp"
                android:layout_marginLeft="@dimen/layout_margin_20dp"
                android:layout_marginBottom="@dimen/layout_height_width_15dp"
                android:layout_toRightOf="@+id/image_news_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



            <TextView
                android:layout_marginBottom="@dimen/margin_pad_5dp"
                android:id="@+id/text_news_title_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_news_title"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_14sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/text_news_detail_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin_50dp"
                android:ellipsize="end"
                android:hint="@string/detaits"
                android:maxLines="2"
                android:textSize="@dimen/text_size_12sp"/>

            <TextView
                android:id="@+id/readMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/read_more"
                android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>