<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:background="@color/colorPrimaryDark">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/layout_margin_10dp"
            app:cardElevation="@dimen/margin_pad_5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_news_banner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_width_120dp"
                    android:background="@drawable/searchbox_shape"
                    android:scaleType="centerCrop"
                    android:src="@color/gray_active_icon" />

                <TextView
                    android:id="@+id/text_news_store_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_news_banner"
                    android:layout_marginLeft="@dimen/layout_margin_10dp"
                    android:text="@string/text_title"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/textsize_16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_news_store_name"
                    android:layout_marginBottom="@dimen/layout_height_width_8dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_10dp"
                        android:layout_weight=".8"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_news_store_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textSize="@dimen/textsize_10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/layout_margin_0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight=".2">

                        <ImageView
                            android:id="@+id/icon_news_call"
                            android:layout_width="@dimen/layout_height_width_40dp"
                            android:layout_height="@dimen/layout_height_width_40dp"
                            android:layout_marginLeft="@dimen/layout_margin_10dp"
                            android:padding="@dimen/margin_pad_5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_phone" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="@string/banner"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>

