<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/layout_margin_10dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardPreventCornerOverlap="false"
    app:cardElevation="@dimen/margin_pad_5dp"
    android:layout_marginTop="@dimen/margin_pad_5dp"
    android:layout_marginLeft="@dimen/layout_height_width_15dp"
    android:layout_marginRight="@dimen/layout_height_width_15dp">

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_news_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_width_150dp"
            android:scaleType="centerCrop"
            android:background="@drawable/searchbox_shape"
            android:src="@color/gray_active_icon" />

        <TextView
            android:layout_marginTop="@dimen/layout_margin_20dp"
            android:layout_marginLeft="@dimen/layout_margin_20dp"
            android:padding="@dimen/margin_pad_3dp"
            android:id="@+id/text_news_title_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_news_banner"
            android:text="@string/text_title"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14sp"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_news_title_banner"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/layout_height_width_8dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="@dimen/layout_margin_0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:orientation="vertical">

                <TextView
                    android:layout_marginLeft="@dimen/layout_margin_20dp"
                    android:id="@+id/text_news_detail_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:hint="@string/detaits"
                     />


            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/layout_margin_0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                >

                <TextView
                    android:id="@+id/readMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_pad_5dp"
                    android:text="@string/read_more"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>